--- a/index.html
+++ b/index.html
@@ -4,9 +4,54 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/loader.css">
+    <link rel="stylesheet" href="css/apr.css">
+
     <title>Admicos's packman repository browser</title>
 </head>
 <body>
-    <span style="color:green;">//TODO: Make useful</span>
+    <div class="container">
+        <h1>Admicos's packman repo</h1>
+        <br><br>
+        <div class="col-md-12" id="loading">
+            <div class="panel panel-default">
+                <div class="panel-heading"><h2 class="panel-title">LOADING</h2></div>
+                <div class="panel-body">
+                    <div class="spinner"></div>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-md-6">
+            <div class="panel panel-default">
+                <div class="panel-heading"><h2 class="panel-title">admipaste</h2></div>
+                <div class="panel-body">
+                    <b>Categories:      </b>utility xde<br>
+                    <b>Version:         </b>1.0.0 <br>
+                    <b>Size:            </b>133769<br>
+                    <b>Dependencies:    </b>admicos/a<br>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-6">
+            <div class="panel panel-default">
+                <div class="panel-heading"><h2 class="panel-title">admipaste</h2></div>
+                <div class="panel-body">
+                    <b>Categories:      </b>utility xde<br>
+                    <b>Version:         </b>1.0.0 <br>
+                    <b>Size:            </b>133769<br>
+                    <b>Dependencies:    </b>admicos/a<br>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+    <script src="https://code.jquery.com/jquery-2.2.4.min.js" charset="utf-8" defer></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" defer></script>
+    <script src="js/packman.js" charset="utf-8" defer></script>
+    <script src="js/apr.js" charset="utf-8" defer></script>
 </body>
 </html>
