--- a/index.html
+++ b/index.html
@@ -24,28 +24,7 @@
             </div>
         </div>
 
-        <div class="col-md-6">
-            <div class="panel panel-default">
-                <div class="panel-heading"><h2 class="panel-title">admipaste</h2></div>
-                <div class="panel-body">
-                    <b>Categories:      </b>utility xde<br>
-                    <b>Version:         </b>1.0.0 <br>
-                    <b>Size:            </b>133769<br>
-                    <b>Dependencies:    </b>admicos/a<br>
-                </div>
-            </div>
-        </div>
-        <div class="col-md-6">
-            <div class="panel panel-default">
-                <div class="panel-heading"><h2 class="panel-title">admipaste</h2></div>
-                <div class="panel-body">
-                    <b>Categories:      </b>utility xde<br>
-                    <b>Version:         </b>1.0.0 <br>
-                    <b>Size:            </b>133769<br>
-                    <b>Dependencies:    </b>admicos/a<br>
-                </div>
-            </div>
-        </div>
+        <div id="packages"></div>
     </div>
 
 
