--- a/index.html
+++ b/index.html
@@ -1,20 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/loader.css">
-    <link rel="stylesheet" href="css/apr.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="css/loader.css" />
+    <link rel="stylesheet" href="css/apr.css" />
+    <link rel="stylesheet" href="css/prism.css" />
 
     <title>Admicos's packman repository browser</title>
 </head>
 <body>
+    <div id="modal-container"></div>
     <div class="container">
         <h1>Admicos's packman repo</h1>
-        <br><br>
+        <br /><br />
         <div class="col-md-12" id="loading">
             <div class="panel panel-default">
                 <div class="panel-heading"><h2 class="panel-title">LOADING</h2></div>
@@ -28,11 +30,12 @@
     </div>
 
 
-    <script src="https://code.jquery.com/jquery-2.2.4.min.js" charset="utf-8" defer></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" defer></script>
+    <script src="https://code.jquery.com/jquery-2.2.4.min.js" charset="utf-8" defer=""></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" defer=""></script>
 
-    <script src="js/util.js" charset="utf-8" defer></script>
-    <script src="js/packman.js" charset="utf-8" defer></script>
-    <script src="js/apr.js" charset="utf-8" defer></script>
+    <script src="js/prism.js" charset="utf-8" defer=""></script>
+    <script src="js/util.js" charset="utf-8" defer=""></script>
+    <script src="js/packman.js" charset="utf-8" defer=""></script>
+    <script src="js/apr.js" charset="utf-8" defer=""></script>
 </body>
 </html>
